--- a/CSS/CLASSWORK/first.html
+++ b/CSS/CLASSWORK/first.html
@@ -28,6 +28,20 @@
             text-decoration: none;
             color: rgb(209, 32, 156);
         }
+        .div p{
+            color: red;
+            text-align: center;
+            background-color: rgb(240, 237, 81);
+            text-decoration-line: underline;
+        }
+        .div1 p{
+            color: red;
+            background-color: rgb(155, 150, 150);
+            text-decoration-line: line-through;
+        }
+        .div2{
+            background-color: rgb(100, 86, 104);
+        }
         
         
 
@@ -54,18 +68,17 @@
        </ul>
       </nav>
       <!-- DIV TAG IS USED TO CREATE DIFFERENT SECTIONS IN A SINGLE LARGE PAGE -->
-      <div>
-        <p style="color: red; text-align: center; background-color: bisque; text-decoration: underline;">welcome to css</p>
+      <div class="div">
+        <p>welcome to css</p>
       </div>
-      <div>
-        <p style="color: red; text-align: right; background-color: bisque; text-decoration: line-through;">welcome</p>
+      <div class="div1">
+        <p>welcome</p>
       </div>
 
-      <div style="background-color:rgb(75, 173, 171);">
-        <h3>Hello
-        <p style="display: inline;">How</p>
-        <p style="text-align: left; text-decoration: line-through;">are</p>
-        <p style="text-align: left; text-decoration: none;">you?</p>
+      <div class="div2">Hello
+        <p style="display: inline; color: red;">How</p>
+        <p style="text-align: left; color: red;">are</p>
+        you?
      </div>
       <!--END OF INLINE CSS -->
 </body>
