--- a/CSS/CLASSWORK/second.html
+++ b/CSS/CLASSWORK/second.html
@@ -26,7 +26,7 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>styling</title>
 </head>
 <body>
     <p>The book "kafka on the shore" tells the stories of the young Kafka Tamura, a bookish 15-year-old boy who runs away from his Oedipal curse, and Satoru Nakata, an old, disabled man with the uncanny ability to talk to cats. The book incorporates themes of music as a communicative conduit, metaphysics, dreams, fate, and the subconscious.</p>
