--- a/CSS/ASSIGNMENTS/calculator.html
+++ b/CSS/ASSIGNMENTS/calculator.html
@@ -78,7 +78,7 @@ border-radius: 10px;
 input{
     width: 40px;
     height: 40px;
-    background-color: black;
+    background-color: #52a85f;
     color: white;
     margin-top: 20px;
     border-radius: 9px;
