--- a/CSS/CLASSWORK/kbacourses/addcourse.html
+++ b/CSS/CLASSWORK/kbacourses/addcourse.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><img src="img/kbalogo.png" alt="kbalogo"></div>
+            <div class="logo"><img src="/CSS/CLASSWORK/img/kbalogo.png" alt="kbalogo"></div>
             <ul>
                 <li><a href="#"></a>Home</li>
                 <li><a href="#"></a>Courses</li>
