--- a/CSS/CLASSWORK/kbacourses/addcourse.html
+++ b/CSS/CLASSWORK/kbacourses/addcourse.html
@@ -11,11 +11,11 @@
         <div class="navdiv">
             <div class="logo"><img src="/CSS/CLASSWORK/img/kbalogo.png" alt="kbalogo"></div>
             <ul>
-                <li><a href="#"></a>Home</li>
-                <li><a href="#"></a>Courses</li>
-                <li><a href="#"></a>Contact Us</li>
-                <li><a href="#"></a>Add Course</li>
-                <li><a href="#"></a>Logout</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Add Course</a></li>
+                <li><a href="#">Logout</a></li>
             </ul>
         </div>
     </nav>
