--- a/CSS/CLASSWORK/kbacourses/home.html
+++ b/CSS/CLASSWORK/kbacourses/home.html
@@ -19,5 +19,40 @@
             </ul>
         </div>
     </nav>
+    <div class="div1">
+        <h2>Learn blockchain Technology from kERALA's first Dedicated Facility for Blockchain Education</h2>
+        <p>Since 2017</p>
+        <div class="div2">
+            <h1>BROWSE OUR TOP COURSES</h1>
+            <p>choose the course that is right for your goal</p>
+        </div>
+        <h3>Top Courses</h3>
+
+        <div class="div3">
+
+        <div class="box1">
+            <p>CED</p>
+        <img src="/CSS/CLASSWORK/img/ced.jpeg" alt="">
+        <a href="">More</a>
+        <input type="button" value="Learn More">
+        </div>
+
+        <div class="box1">
+            <p>DEB</p>
+        <img src="/CSS/CLASSWORK/img/Developer-Essentials-Program-.png" alt="">
+        <a href="">More</a>
+        <input type="button" value="Learn More">
+        </div>
+        
+        <div class="box1">
+            <p>CBA</p>
+        <img src="/CSS/CLASSWORK/img/bca.jpeg" alt="">
+        <a href="">More</a>
+        <input type="button" value="Learn More">
+        </div>
+
+        </div>
+        <input type="button" value="View All Courses">
+    </div>
 </body>
 </html>
