--- a/CSS/CLASSWORK/kbacourses/cntct.html
+++ b/CSS/CLASSWORK/kbacourses/cntct.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="stylecss/style.css">
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="navdiv">
+            <div class="logo"><img src="/CSS/CLASSWORK/img/kbalogo.png" alt="kbalogo"></div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Add Course</a></li>
+                <li><a href="#">Logout</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="contact">
+        <p style="color: rgb(125, 42, 140);">Contact Us</p>
+        <h2>Get in touch</h2>
+        <p>Our friendly team is always here to chat</p>
+    </div>                  
+    <div class="details">
+        <div class="details1">
+            <img src="/CSS/CLASSWORK/img/Gmail Purple Icon.jpeg" alt=""width=50px>
+            <h3>Email</h3>
+            <p>Our friendly team is here to help.</p>
+            <p class="details2">hello@merakiui.com</p>
+        </div>
+        <div class="details1">
+            <img src="/CSS/CLASSWORK/img/location.jpeg" alt=""width=50px>
+            <h3>Office</h3>
+            <p>Come say hello at our office HQ.</p>
+            <p class="details2">100 Smith Stree Collingwood VIC 3066 AU</p>
+        </div>
+        <div class="details1">
+            <img src="/CSS/CLASSWORK/img/phone.jpeg" alt=""width=50px>
+            <h3>Phone</h3>
+            <p>Mon-Fri from 8am to 5pm.</p>
+            <p class="details2">+1 (555) 000-0000</p>
+        </div>
+    </div>
 </body>
 </html>
