--- a/CSS/CLASSWORK/kbacourses/courses.html
+++ b/CSS/CLASSWORK/kbacourses/courses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Courses</title>
     <link rel="stylesheet" href="stylecss/style.css">
 </head>
 <body>
@@ -14,25 +14,19 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="cntct.html">Contact Us</a></li>
-                <li><a href="addcourse.html">Add Courses</a></li>
-                <li><a href="login.html">Log out</a></li>
+                <li><a href="addcourse.html">Add Course</a></li>
+                <li><a href="login.html">Logout</a></li>
             </ul>
         </div>
     </nav>
-    <div class="div1">
-        <h2>Learn blockchain Technology from kERALA's first Dedicated Facility for Blockchain Education</h2>
-        <p>Since 2017</p>
-        <div class="div2">
-            <h1>BROWSE OUR TOP COURSES</h1>
-            <p>choose the course that is right for your goal</p>
-        </div>
-        <h3>Top Courses</h3>
-
-        <div class="div3">
+    <div class="courses">
+        <h1>All Courses</h1>
+    <div class="div3">
 
         <div class="box1">
             <p>CED</p>
         <img src="/CSS/CLASSWORK/img/ced.jpeg" alt="">
+        <a href="">
         <input type="button" value="Learn More"></a>
         </div>
 
@@ -46,12 +40,11 @@
         <div class="box1">
             <p>CBA</p>
         <img src="/CSS/CLASSWORK/img/bca.jpeg" alt="">
+        <a href="">
         <input type="button" value="Learn More"></a>
         </div>
 
         </div>
-        <a href="courses.html">
-        <input type="button" value="View All Courses"></a>
     </div>
 </body>
 </html>
