--- a/CSS/CLASSWORK/kbacourses/lrnmore.html
+++ b/CSS/CLASSWORK/kbacourses/lrnmore.html
@@ -11,21 +11,23 @@
         <div class="navdiv">
             <div class="logo"><img src="/CSS/CLASSWORK/img/kbalogo.png" alt="kbalogo"></div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Add Course</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="cntct.html">Contact Us</a></li>
+                <li><a href="addcourse.html">Add Course</a></li>
+                <li><a href="login.html">Logout</a></li>
             </ul>
         </div>
     </nav> 
+    <br>
+    <br>
   <div class="main">
-    <a href="">Back to Courses</a>
+    <a href="courses.html">Back to Courses</a>
     
     <div class="col">
         <img src="/CSS/CLASSWORK/img/Developer-Essentials-Program-.png" alt="">
         <ul style="display: flex;justify-content: space-between;">
-            <li style="list-style: none;font-size:30px;color:rgb(74, 18, 74);">Blockchain Technology</li>
+            <li style="list-style: none;font-size:30px;color:rgb(74, 18, 74);">DEB</li>
             <li style="position: relative;bottom: 50px ;list-style: none;color: red;">Rs.15000 <input type="button" value="add to cart"></li>
         </ul>
     
@@ -51,7 +53,7 @@
     </div>
     <div class="button1">
         <ul style="display: flex;justify-content: space-between;">
-            <li style="list-style: none;position: relative;left: 1300px ; "><a href="updatec.html"><input type="button"  value="Edit Course"></a> <a href=""><input type="button" value="Remove Course" style="background-color: red;"></a></li>
+            <li style="list-style: none;position: relative;left: 1300px ; "><a href="updatec.html"><input type="button"  value="Edit Course"></a> <a href="#"><input type="button" value="Remove Course" style="background-color: red;"></a></li>
         </ul>
 
     </div>
