--- a/CSS/CLASSWORK/kbacourses/updatec.html
+++ b/CSS/CLASSWORK/kbacourses/updatec.html
@@ -11,11 +11,11 @@
         <div class="navdiv">
             <div class="logo"><img src="/CSS/CLASSWORK/img/kbalogo.png" alt="kbalogo"></div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Courses</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Add Course</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="cntct.html">Contact Us</a></li>
+                <li><a href="addcourse.html">Add Course</a></li>
+                <li><a href="login.html">Logout</a></li>
             </ul>
         </div>
     </nav>
