--- a/CSS/CLASSWORK/certiapp/issuecerti.html
+++ b/CSS/CLASSWORK/certiapp/issuecerti.html
@@ -15,7 +15,7 @@
    <div class="container">
         <h1>Issue New Certificate</h1>
             <form action="">
-                <label for="course">Select Course</label>
+                <label for="course">Select Course*</label>
                 <select name="" id="course">
                     <option value="Certified Blockchain Associate">Certified Blockchain Associate</option>
                     <option value="Certified Ethereum Developer">Certified Ethereum Developer</option>
