--- a/CSS/CLASSWORK/kbacourses/courses.html
+++ b/CSS/CLASSWORK/kbacourses/courses.html
@@ -27,21 +27,21 @@
             <p>CED</p>
         <img src="/CSS/CLASSWORK/img/ced.jpeg" alt="">
         <a href="">
-        <input type="button" value="Learn More"></a>
+        <input type="button" value="Learn More" style="margin-left: 200px;"></a>
         </div>
 
         <div class="box1">
             <p>DEB</p>
         <img src="/CSS/CLASSWORK/img/Developer-Essentials-Program-.png" alt="">
         <a href="lrnmore.html">
-        <input type="button" value="Learn More"></a>
+        <input type="button" value="Learn More" style="margin-left: 200px;"></a>
         </div>
         
         <div class="box1">
             <p>CBA</p>
         <img src="/CSS/CLASSWORK/img/bca.jpeg" alt="">
         <a href="">
-        <input type="button" value="Learn More"></a>
+        <input type="button" value="Learn More" style="margin-left: 200px;"></a>
         </div>
 
         </div>
