--- a/TAILWIND/KBACOURSES/addcourse.html
+++ b/TAILWIND/KBACOURSES/addcourse.html
@@ -20,21 +20,21 @@
         </nav>
             <img class="flex flex-left " src="/CSS/CLASSWORK/img/kbalogo.png" height="=70px" width="68px" alt="kbalogo"> </div>
          </div>
-    <div class="bg-blue-300 mt-32 p-8 max-w-md mx-auto rounded-lg  ">
+    <div class="bg-blue-300 mt-32 p-8 max-w-md mx-auto rounded-lg ">
         <h1 class="font-mono text-2xl indent-32 font-bold">Add Course</h1>
         <div class="mt-4"><label for="">Course Name:</label></div>
-        <div class="mt-4"><input class="w-80 h-9" type="text" placeholder="eg. Certified Blockchain Associate"></div>
+        <div class="mt-4"><input class="w-80 h-9 ring-2 hover:ring-4" type="text" placeholder="eg. Certified Blockchain Associate"></div>
         <div class="mt-4"><label for="">Course ID:</label></div>    
-        <div class="mt-4"><input class="w-80 h-9" type="text" placeholder="eg. 1"></div>    
+        <div class="mt-4"><input class="w-80 h-9 ring-2 hover:ring-4" type="text" placeholder="eg. 1"></div>    
         <div class="mt-4"><label for="course-type">Course Type:</label></div>    
-        <div class="mt-4"><select class="w-80 h-9" name="" id="course-type">
+        <div class="mt-4"><select class="w-80 h-9 ring-2 hover:ring-4" name="" id="course-type">
             <option value="self-paced">Self-Paced</option>
             <option value="hybrid">Hybrid</option>
         </select></div>    
-        <div class="mt-4"><label for="description">Description:</label></div>    
-        <div class="mt-4"> <textarea name="description" id="" rows="5" cols="31" placeholder="small description on the course"></textarea></div>    
+        <div class="mt-4 "><label for="description">Description:</label></div>    
+        <div class="mt-4 "> <textarea name="description" id="" rows="5" cols="31" placeholder="small description on the course"></textarea></div>    
         <div class="mt-4"><label for="price">Price:</label></div>    
-        <div class="mt-4"><select class="w-80 h-9" name="" id="price">
+        <div class="mt-4"><select class="w-80 h-9 ring-2 hover:ring-4" name="" id="price">
             <option value="price1">Rs. 5000</option>
             <option value="price2">Rs. 6000</option>
         </select></div>   
