--- a/CSS/ASSIGNMENTS/LMS/login.html
+++ b/CSS/ASSIGNMENTS/LMS/login.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
+    <nav class="navbar">
+            <ul>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="addbook.html">Add Book</a></li>
+                <li><a href="viewbook.html">View Book</a></li>
+                <li><a href="login.html">Login</a></li>
+                <!-- <li><a href="">Log out</a></li> -->
+            </ul>
+    </nav>
+
     <div class="login-box">
         <h1>Login</h1>
         <div class="textbox">
@@ -16,6 +26,7 @@
             <input type="password" placeholder="Password" name="" value="">
         </div>
         <input class="btn" type="button" name="" value="Login">
+        <p class="part2">Don't have an account? <a href="signup.html">Sign Up</a></p>
     </div>
 </body>
 </html>
