--- a/TAILWIND/CERTIAPP/home.html
+++ b/TAILWIND/CERTIAPP/home.html
@@ -6,8 +6,8 @@
     <title>Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="">
-    <div class="flex justify-end p-2">
+<body class="bg-gray-200">
+    <div class="flex justify-end p-2 shadow-lg shadow-cyan-500">
          <a class="bg-sky-500 rounded w-24 h-10 p-2 pl-6 mr-4 text-justify text-slate-100" href="home.html">Home</a>
                 <a class="rounded w-40 h-10 p-2 pl-6 text-justify" href="issuecerti.html">Issue Certificate</a>
     </div>
