--- a/TAILWIND/CERTIAPP/issuecerti.html
+++ b/TAILWIND/CERTIAPP/issuecerti.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <body class="bg-gray-200">
-        <div class="flex justify-end p-2">
-             <a class="bg-sky-500 rounded w-24 h-10 p-2 pl-6 mr-4 text-justify text-slate-100" href="home.html">Home</a>
-                    <a class="rounded w-40 h-10 p-2 pl-6 text-justify" href="issuecerti.html">Issue Certificate</a>
+        <div class="flex justify-end p-2 shadow-lg shadow-cyan-500">
+             <a class="rounded w-24 h-10 p-2 pl-6 mr-4 text-justify " href="home.html">Home</a>
+                    <a class="bg-sky-500 rounded w-40 h-10 p-2 pl-6 text-justify text-slate-100" href="issuecerti.html">Issue Certificate</a>
         </div>
-        <div class="text-2xl font-extrabold">
+        <div class="text-2xl font-extrabold mt-2">
     <h2>Certificate Dapp</h2>
         </div>
-    <div class="bg-blue-300 bg-blue-300 mt-32 p-8 max-w-xl mx-auto rounded-lg">
-        <div class="font-mono text-2xl font-bold"><h1>Issue New Certificate</h1></div>
+    <div class="bg-blue-300 bg-blue-300 mt-32 p-8 max-w-lg mx-auto rounded-lg shadow-lg shadow-cyan-500">
+        <div class="font-mono text-2xl font-bold ml-16"><h1>Issue New Certificate</h1></div>
+        <div class="ml-16">
             <div  class="mt-8"><label for="course">Select Course*</label></div>
                 <div  class="mt-4"><select class="w-80 h-9 ring-2 hover:ring-4" name="" id="course">
                     <option value="Certified Blockchain Associate">Certified Blockchain Associate</option>
@@ -37,8 +38,9 @@
                 </div>
                 <div class="mt-4"><label for="date">Issue Date</label></div>
                 <div  class="mt-4"><input class="w-80 h-9 ring-2 hover:ring-4" type="date"></div>
-                <div><button  class="mt-4  border-2 border-stone-950 bg-amber-300 px-2  focus:ring-2 ring-blue-500">Add Course</button></div>
+                <div><button  class="mt-4 ml-28 border-2 border-stone-950 bg-amber-300 px-2  focus:ring-2 ring-blue-500">Add Course</button></div>
             </div>
+        </div>
     </div>
 </body>
 </html>
