--- a/TAILWIND/CERTIAPP/viewcerti.html
+++ b/TAILWIND/CERTIAPP/viewcerti.html
@@ -6,7 +6,7 @@
     <title>View Certificate</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-200">
     <div class="text-center text-4xl font-extrabold mt-24">
         <h2>Kerala Blockchain Academy</h2>
     </div>
