--- a/TAILWIND/KBACOURSES/homepage_htmlfile.html
+++ b/TAILWIND/KBACOURSES/homepage_htmlfile.html
@@ -10,10 +10,11 @@
   <div class="bg-purple-400">
     <img class="size-16" src="/TAILWIND/KBACOURSES/images/kbalogo.png" alt="">
     <div class="bg-purple-400  text-white flex justify-end space-x-3">
-      <a href="#">Home</a>
-      <a href="#">Courses</a>
-      <a href="#">Add Courses</a>
-      <a href="#">Contact Us</a>
+      <a href="homepage_htmlfile.html">Home</a>
+      <a href="courses.html">Courses</a>
+      <a href="addcourse.html">Add Courses</a>
+      <a href="contactus.html">Contact Us</a>
+      <a href="login.html">Logout</a>
     </div>
 
   </div>
