--- a/TAILWIND/KBACOURSES/addcourse.html
+++ b/TAILWIND/KBACOURSES/addcourse.html
@@ -8,19 +8,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-        <div class="bg-amber-300 h-16 ">
-            <nav class="flex float-right mt-3">
-                <div class="mt-2 flex justify-end space-x-8 mr-2">
-                <a href="home.html">Home</a>
-                <a href="courses.html">Courses</a>
-                <a href="cntct.html">Contact Us</a>
-                <a href="addcourse.html">Add Course</a>
-                <a href="login.html">Logout</a>
-            </div>
-        </nav>
-            <img class="flex flex-left " src="/CSS/CLASSWORK/img/kbalogo.png" height="=70px" width="68px" alt="kbalogo"> </div>
-         </div>
-    <div class="bg-blue-300 mt-32 p-8 max-w-md mx-auto rounded-lg ">
+      <div class="bg-purple-400">
+        <img class="size-16" src="/TAILWIND/KBACOURSES/images/kbalogo.png" alt="">
+        <div class="bg-purple-400  text-white flex justify-end space-x-3">
+          <a href="homepage_htmlfile.html">Home</a>
+          <a href="courses.html">Courses</a>
+          <a href="addcourse.html">Add Courses</a>
+          <a href="contactus.html">Contact Us</a>
+          <a href="login.html">Logout</a>
+        </div>
+    </div>
+    <div class="bg-purple-300 mt-32 p-8 max-w-md mx-auto rounded-lg ">
         <h1 class="font-mono text-2xl indent-32 font-bold">Add Course</h1>
         <div class="mt-4"><label for="">Course Name:</label></div>
         <div class="mt-4"><input class="w-80 h-9 ring-2 hover:ring-4" type="text" placeholder="eg. Certified Blockchain Associate"></div>
@@ -38,7 +36,7 @@
             <option value="price1">Rs. 5000</option>
             <option value="price2">Rs. 6000</option>
         </select></div>   
-         <div><button  class="mt-4  border-2 border-stone-950 bg-amber-300 px-2  focus:ring-2 ring-blue-500">Add Course</button></div>
+         <div><button  class="mt-4  border-2 border-stone-950 bg-purple-600 px-2  focus:ring-2 ring-blue-500">Add Course</button></div>
         </div>
 
 </form>
