--- a/TAILWIND/KBACOURSES/login.html
+++ b/TAILWIND/KBACOURSES/login.html
@@ -8,14 +8,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="flex justify-center mt-64">
-         <div class="bg-slate-300 max-w-96 p-8 rounded-lg shadow-2xl shadow-indigo-300	">
+         <div class="bg-purple-300 max-w-96 p-8 rounded-lg shadow-2xl shadow-indigo-300	">
         <p class="font-mono text-2xl indent-28 ">Login</p>
         
            <div class="mt-4"><label for="">Email:</label></div> 
             <input type="email" placeholder="" class="ring-2 hover:ring-4"><br>
             <div class="mt-4"><label for="">Password:</label></div>
             <input type="password" placeholder=""class="ring-2 hover:ring-4">
-            <div><button class="mt-7 float-right border-2 border-stone-950 bg-amber-300 px-2  focus:ring-2 ring-blue-500">Login</button></div>
+            <div><button class="mt-7 float-right border-2 border-stone-950 bg-violet-600 px-2  focus:ring-2 ring-blue-500">Login</button></div>
             <div class="mt-14"><p><a href="#">Forgot Password?</a></p></div>
         
         <div class="mt-4"><p>Don't have an account? <a href="signup.html" class="text-sky-600">Sign Up</a></p></div>
