--- a/TAILWIND/KBACOURSES/contactus.html
+++ b/TAILWIND/KBACOURSES/contactus.html
@@ -32,7 +32,7 @@
     <img class="size-12 ml-64 mb-6 mt-44" src="/TAILWIND/KBACOURSES/images/location.jpeg" alt="">
     <h3 class="text-center font-bold">Office</h3>
     <p class="text-center">Come say hello at our office HQ..</p>
-    <p class="text-center text-purple-600">100 Smith Stree Collingwood VIC 3066 AU.</p>
+    <p class="text-center text-purple-600">100 Smith Street Collingwood VIC 3066 AU.</p>
    </div> 
    <div  class="justify-center items-center ml-12">
     <img class="size-12 ml-64 mb-6 mt-44" src="/TAILWIND/KBACOURSES/images/phone.jpeg" alt="">
