--- a/TAILWIND/KBACOURSES/homepage_htmlfile.html
+++ b/TAILWIND/KBACOURSES/homepage_htmlfile.html
@@ -6,7 +6,7 @@
     <title>KBA Courses</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-purple-400 dark:bg-white">
   <div class="bg-purple-400">
     <img class="size-16" src="/TAILWIND/KBACOURSES/images/kbalogo.png" alt="">
     <div class="bg-purple-400  text-white flex justify-end space-x-3">
@@ -20,9 +20,9 @@
   </div>
   <div>
     <!--Heading-->
-    <div class="m-2 bg-slate-100 p-10 text-purple-600 text-center rounded shadow-lg flex flex-col">
-        <h1 class="font-bold text-xl">Learn Blockchain Technology From Kerala's First Dedicated Facility for Blockchain Education</h1>
-        <h2 class="mt-4 text-lg">Since 2017</h2>
+    <div class="m-2 bg-slate-800 p-10 text-purple-600 text-center rounded shadow-lg flex flex-col">
+        <h1 class="font-bold text-xl dark:text-white">Learn Blockchain Technology From Kerala's First Dedicated Facility for Blockchain Education</h1>
+        <h2 class="mt-4 text-lg dark:text-white">Since 2017</h2>
       </div>
 
       <!-- Top Courses -->
@@ -32,7 +32,7 @@
   </div>
 
   <!-- courses -->
-  <div class="grid grid-cols-2">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-5">
 
     <div class="bg-purple-300 rounded-md shadow-2xl flex flex-col items-center justify-center mx-10 py-10 my-10 mt-8">
         <h2 class="mb-6">Certified Blockchain Associate</h2>
@@ -62,8 +62,9 @@
   <p class="mt-5 justify-center text-center mx-5">A blockchain is a distributed system that exists across a network of nodes within a peer-to-peer framework. Blockchain technology is founded on the principles of decentralisation and consensus that ensure trust within the network. These distributed platforms are fundamental to understanding the new financial system being built with cryptocurrencies and decentralised protocols. </p>
   <a class="mt-4 text-lg text-center hover:text-white border rounded-lg bg-purple-600 hover:bg-blue-600 w-2/12 items-center" href="#" >Learn More</a>
 </div>
-
-
+</div>
+<div class="flex justify-center">
+  <iframe src="https://www.youtube.com/embed/umepbfKp5rI" frameborder="0"></iframe>
 </div>
   <footer>
     <p class="text-center bg-sky-300 text-white py-2 max-auto">&copy;All rights are reserved</p>
