--- a/TAILWIND/ASSIGNMENTS/ythome.html
+++ b/TAILWIND/ASSIGNMENTS/ythome.html
@@ -11,7 +11,7 @@
 />
 <link rel="shortcut icon" href="ytlogo.jpeg" type="image/x-icon">
 </head>
-<body class="bg-grey-100">
+<body class="bg-grey-100 dark:">
     <!-- Header -->
     <header class="bg- shadow-md py-4 px-6">
         <div class="container mx-0 flex items-center">
@@ -99,7 +99,7 @@
                     <button class="ml-2 w-auto h-7 border border-2 rounded-md px-4">Manga</button>
                 </div>  
                 <!-- videos -->
-                <div class="flex justify-center mt-12 grid grid-cols-4 gap-7">
+                <div class="flex justify-center mt-12 grid grid-cols-4  sm:grid-cols-2 lg:grid-cols-4 gap-7">
                     <div>
                     <iframe class="basis-1/4 w-[370px] h-64 rounded-xl" src="https://www.youtube.com/embed/umepbfKp5rI" frameborder="0"></iframe>
                     <div class="flex p-4 mt-4 gap-5"><img class="rounded-full" src="/TAILWIND/ASSIGNMENTS/img.jpeg" alt="" width="70" ><p><b>Blockchain</b><br>channel name <br>
@@ -149,7 +149,7 @@
                 </div>
 
         
- </div>
+    </div>
     
 </body>
 </html>
