--- a/TAILWIND/KBACOURSES/courses.html
+++ b/TAILWIND/KBACOURSES/courses.html
@@ -26,7 +26,7 @@
         <img class="size-2/4" src="./images/rp.png">
 
         <p class="mt-5 justify-center text-center mx-5">A blockchain is a distributed system that exists across a network of nodes within a peer-to-peer framework. Blockchain technology is founded on the principles of decentralisation and consensus that ensure trust within the network. These distributed platforms are fundamental to understanding the new financial system being built with cryptocurrencies and decentralised protocols. </p>
-        <a class="mt-4 text-lg text-center hover:text-white border rounded-lg bg-purple-600 hover:bg-blue-600 w-2/12 items-center" href="#" >Learn More</a>
+        <a class="mt-4 text-lg text-center hover:text-white border rounded-lg bg-purple-600 hover:bg-blue-600 w-2/12 items-center" href="lrnmore.html" >Learn More</a>
     </div>
     <div class="bg-purple-300 rounded-md shadow-2xl flex flex-col items-center justify-center mx-10 py-10 my-10 mt-8">
       <h2 >Certified Ethereum Developer</h2>
