--- a/TAILWIND/KBACOURSES/lrnmore.html
+++ b/TAILWIND/KBACOURSES/lrnmore.html
@@ -31,7 +31,7 @@
                 </div>
             <div class="max-auto flex justify-end space-x-3 ml-12 mr-12">
                 <p class="text-red-600">RS.15000</p>
-                <button class="bg-blue-600">add to cart</button>
+                <button class="bg-blue-600">Add to cart</button>
             </div>
             <h4 class="font-bold">Description</h4>
             <p>Blockchain technology is an advanced database mechanism that allows transparent information sharing within a business network. A blockchain database stores data in blocks that are linked together in a chain.</p>
@@ -50,9 +50,9 @@
 
        
     </div>
-    <div class="">
-        <button class="bg-blue-600">edit course</button>
-        <button class="bg-red-600 ">remove course</button>
+    <div class="flex justify-end space-x-3 mr-96 mt-4">
+        <button class="bg-blue-600 px-4"><a href="#"></a>edit course</button>
+        <button class="bg-red-600 px-4">remove course</button>
     </div>
 
 </body>
