--- a/JAVASCRIPT/CLASSWORKS/1909.html
+++ b/JAVASCRIPT/CLASSWORKS/1909.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS</title>
     <script>
-        console.log("2+5")
-        console.log("5*10")
-        console.log("(26*3)+4")
-        console.log("56/5 \n \n \n \n \n ")
-        console.log("*")
-        console.log("**")
-        console.log("*** \n \n \n \n \n ")
-        console.log("  *")
-        console.log(" **")
-        console.log("*** \n \n \n \n \n ")
-        console.log("1")
-        console.log("12")
-        console.log("123 \n \n \n \n \n ")
-        console.log("1")
-        console.log("23")
-        console.log("456 \n \n \n \n \n ")
+        document.write("2+5 <br>")
+        document.write("5*10 <br>")
+        document.write("(26*3)+4 <br>")
+        document.write("56/5  <br> <br> <br>")
+        document.write("* <br>")
+        document.write("** <br>")
+        document.write("*** <br> <br> <br>")
+        document.write(" &nbsp &nbsp &nbsp *<br>")
+        document.write("&nbsp &nbsp ** <br>")
+        document.write("&nbsp *** <br> <br> <br>")
+        document.write("1 <br>")
+        document.write("12  <br>")
+        document.write("123  <br> <br> <br>")
+        document.write("1  <br>")
+        document.write("23  <br>")
+        document.write("456  <br> <br> <br>")
         document.write("Result of 3+4-1 is: ",3+4-1,"<br>")
         document.write("Result of (3*5)+1 is: ",(3*5)+1,"<br>")
         document.write("Result of (5*2)/2 is: ",(5*2)/2,"<br>")
@@ -34,6 +34,40 @@
     </script>
 </head>
 <body>
-    <!-- <p>classwork</p> -->
+    <p id="demo1">welcome to javascript</p>
+    <p id="demo2">welcome to javascript</p>
+    <p id="demo3">welcome to javascript</p>
+    <p id="demo4">welcome to javascript</p>
+    <p id="demo5">welcome to javascript</p>
+    <p id="demo6">welcome to javascript</p>
+    <p id="demo7">welcome to javascript</p>
+    <p id="demo8">welcome to javascript</p>
+    <p id="demo9">welcome to javascript</p>
+    <p id="demo10">welcome to javascript</p>
+    <script>
+        console.log(" 3+4-1:", 3+4-1, )
+            console.log(" (3*5)+1: ", (3*5)+1,)
+            console.log("(5*2)/2: ",(5*2)/2,)
+            console.log("10*2+3-1: ",10*2+3-1,)
+            console.log("10%2: ",10%2,)
+            console.log("17%2: ",17%2,)
+            console.log("(5*6)%4: ",(5*6)%4,)
+            console.log("3.5+2.4: ",3.5+2.4,)
+            console.log("104.5/5: ",104.5/5,)
+            console.log("4.5*2: ",4.5*2)
+
+
+            document.getElementById("demo1").innerHTML=(" 3+4-1:", 3+4-1)
+            document.getElementById("demo2").innerHTML=(" (3*5)+1: ", (3*5)+1)
+            document.getElementById("demo3").innerHTML=("(5*2)/2: ",(5*2)/2)
+            document.getElementById("demo4").innerHTML=("10*2+3-1: ",10*2+3-1)
+            document.getElementById("demo5").innerHTML=("10%2: ",10%2)
+            document.getElementById("demo6").innerHTML=("17%2: ",17%2)
+            document.getElementById("demo7").innerHTML=("(5*6)%4: ",(5*6)%4)
+            document.getElementById("demo8").innerHTML=("3.5+2.4: ",3.5+2.4)
+            document.getElementById("demo9").innerHTML=("104.5/5: ",104.5/5)
+            document.getElementById("demo10").innerHTML=("4.5*2: ",4.5*2)
+    </script>
+    
 </body>
 </html>
