--- a/JAVASCRIPT/ACTIVITY/1909.html
+++ b/JAVASCRIPT/ACTIVITY/1909.html
@@ -57,16 +57,16 @@
             console.log("4.5*2: ",4.5*2)
 
 
-            document.getElementById("demo1").innerHTML=(" 3+4-1:", 3+4-1)
-            document.getElementById("demo2").innerHTML=(" (3*5)+1: ", (3*5)+1)
-            document.getElementById("demo3").innerHTML=("(5*2)/2: ",(5*2)/2)
-            document.getElementById("demo4").innerHTML=("10*2+3-1: ",10*2+3-1)
-            document.getElementById("demo5").innerHTML=("10%2: ",10%2)
-            document.getElementById("demo6").innerHTML=("17%2: ",17%2)
-            document.getElementById("demo7").innerHTML=("(5*6)%4: ",(5*6)%4)
-            document.getElementById("demo8").innerHTML=("3.5+2.4: ",3.5+2.4)
-            document.getElementById("demo9").innerHTML=("104.5/5: ",104.5/5)
-            document.getElementById("demo10").innerHTML=("4.5*2: ",4.5*2)
+            document.getElementById("demo1").innerHTML=(`3+4-1=${3+4-1}`) //can use both methods as follows
+            document.getElementById("demo2").innerHTML=(`(3*5)+1= ${(3*5)+1}`)
+            document.getElementById("demo3").innerHTML="(5*2)/2= "+(5*2)/2
+            document.getElementById("demo4").innerHTML=(`10*2+3-1= ${10*2+3-1}`)
+            document.getElementById("demo5").innerHTML="10%2= "+10%2
+            document.getElementById("demo6").innerHTML=("17%2= "+17%2)
+            document.getElementById("demo7").innerHTML=("(5*6)%4= "+(5*6)%4)
+            document.getElementById("demo8").innerHTML=(`3.5+2.4= ${3.5+2.4}`)
+            document.getElementById("demo9").innerHTML=("104.5/5= "+104.5/5)
+            document.getElementById("demo10").innerHTML=("4.5*2= "+4.5*2)
     </script>
     
 </body>
