--- a/JAVASCRIPT/CLASSWORKS/demo.html
+++ b/JAVASCRIPT/CLASSWORKS/demo.html
@@ -23,5 +23,20 @@
         console.log(`value of ${x}`)
         document.getElementById("demo").innerHTML="hello world" //change the innerhtml value in html content with the id as said
     </script>
+
+<!-- 25/09-wednesday -->
+    <p>javascript</p>
+    <p>javascript</p>
+    <p>javascript</p>
+    <p>javascript</p>
+    <p>javascript</p>
+    <p>javascript</p>
+    <p>javascript</p>
+    <p>javascript</p>
+    <p>javascript</p>
+    <p>javascript</p>
+    <script>
+        document.write(p);
+    </script>
 </body>
 </html>
