--- a/JAVASCRIPT/CLASSWORKS/array.html
+++ b/JAVASCRIPT/CLASSWORKS/array.html
@@ -32,7 +32,10 @@
         for(let i=0;i<a.length;i++){
             a[i]=a[i]+2;
         }
-        document.write(a);
+        document.write(a,"<br>");
         </script>
+
+
+        
 </body>
 </html>
