--- a/JAVASCRIPT/ACTIVITY/2409A3/A3Set2/s2q6.html
+++ b/JAVASCRIPT/ACTIVITY/2409A3/A3Set2/s2q6.html
@@ -9,7 +9,8 @@
     <script>
         document.write("Write a program to read temperature in centigrade and display a suitable message according to the temperature state below:Temp < 0 then Freezing weather Temp 0-10 then Very Cold weather Temp 10-20 then Cold weather Temp 20-30 then Normal in Temp Temp 30-40 then Its Hot Temp >=40 then Its Very Hot ")
         document.write("<br><br>")
-        let temp = prompt("Enter the temperature in centigrade:");
+        // let temp = prompt("Enter the temperature in centigrade:");
+        let temp=27;
 if (temp < 0) {
     document.write("Freezing weather");
 } else if (temp < 10) {
