--- a/JAVASCRIPT/ACTIVITY/2409A3/A3Set2/s2q5.html
+++ b/JAVASCRIPT/ACTIVITY/2409A3/A3Set2/s2q5.html
@@ -8,6 +8,25 @@
 <body>
     <script>
         document.write("Write a program to calculate the root of a quadratic equation.")
+        let a=3; b=7; c=5;
+        document.write("<br>The quadratic equation is : ",a, "x<sup>2</sup> + ",b, "x + ",c)
+
+        let d=(b*b) - (4*a*c)
+        document.write("<br><br> Discriminant :",d)
+
+        if(d>0){
+            let r1=(-b) + (Math.sqrt(d)) / (2*a);
+            let r2=(-b) - (Math.sqrt(d)) / (2*a);
+            document.write("roots are real and distinct: <br> root1 :",r1, "<br>root2 :",r2)
+        }
+        else if(d==0){
+            let r1 = (-b) / (2*a);
+            let r2 = (-b) / (2*a);
+            document.write("<br> roots are real and identical : <br> root1 :".r1,"<br>root2 : ",r2)
+        }
+        else{
+            document.write("<br> roots are complex")
+        }
         
     </script>
 </body>
