--- a/JAVASCRIPT/ACTIVITY/2409A3/A3Set2/s2q6.html
+++ b/JAVASCRIPT/ACTIVITY/2409A3/A3Set2/s2q6.html
@@ -9,19 +9,19 @@
     <script>
         document.write("Write a program to read temperature in centigrade and display a suitable message according to the temperature state below:Temp < 0 then Freezing weather Temp 0-10 then Very Cold weather Temp 10-20 then Cold weather Temp 20-30 then Normal in Temp Temp 30-40 then Its Hot Temp >=40 then Its Very Hot ")
         document.write("<br><br>")
-        // let temp = prompt("Enter the temperature in centigrade:");
         let temp=27;
+        document.write("Temparature : ",temp,"<br>")
 if (temp < 0) {
     document.write("Freezing weather");
-} else if (temp < 10) {
+} else if (temp >= 0 && temp < 10) {
     document.write("Very Cold weather");
-} else if (temp < 20) {
+} else if (temp >= 10 && temp < 20) {
     document.write("Cold weather");
-} else if (temp < 30) {
+} else if (temp >= 20 && temp < 30) {
     document.write("Normal in Temp");
-} else if (temp < 40) {
+} else if (temp >= 30 && temp < 40) {
     document.write("It's Hot");
-} else {
+} else if(temp >= 40) {
     document.write("It's Very Hot");
 }
     </script>
