--- a/KBA-COURSE/CSS/courses.html
+++ b/KBA-COURSE/CSS/courses.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><img src="/CSS/CLASSWORK/img/kbalogo.png" alt="kbalogo"></div>
+            <div class="logo"><img src="../CSS/img/kbalogo.png" alt="kbalogo"></div>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="courses.html">Courses</a></li>
@@ -25,21 +25,21 @@
 
         <div class="box1">
             <p>CED</p>
-        <img src="/CSS/CLASSWORK/img/ced.jpeg" alt="">
+        <img src="../CSS/img/ced.jpeg" alt="">
         <a href="">
         <input type="button" value="Learn More" style="margin-left: 200px;"></a>
         </div>
 
         <div class="box1">
             <p>DEB</p>
-        <img src="/CSS/CLASSWORK/img/Developer-Essentials-Program-.png" alt="">
+        <img src="../CSS/img/Developer-Essentials-Program-.png" alt="">
         <a href="lrnmore.html">
         <input type="button" value="Learn More" style="margin-left: 200px;"></a>
         </div>
         
         <div class="box1">
             <p>CBA</p>
-        <img src="/CSS/CLASSWORK/img/bca.jpeg" alt="">
+        <img src="../CSS/img/bca.jpeg" alt="">
         <a href="">
         <input type="button" value="Learn More" style="margin-left: 200px;"></a>
         </div>
