--- a/KBA-COURSE/TAILWIND/addcourse.html
+++ b/KBA-COURSE/TAILWIND/addcourse.html
@@ -9,7 +9,7 @@
 </head>
 <body>
       <div class="bg-purple-400">
-        <img class="size-16" src="/TAILWIND/KBACOURSES/images/kbalogo.png" alt="">
+        <img class="size-16" src="../TAILWIND/images/kbalogo.png" alt="">
         <div class="bg-purple-400  text-white flex justify-end space-x-3">
           <a href="homepage_htmlfile.html">Home</a>
           <a href="courses.html">Courses</a>
