--- a/LIBRARY_MS/TAILWIND/addbook.html
+++ b/LIBRARY_MS/TAILWIND/addbook.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMS-Add Book</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="/TAILWIND/ASSIGNMENTS/LMS/lblogo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="lblogo.jpeg" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
     <div  class="grid grid-cols-2 shadow-md shadow-emerald-500/50  p-2">
         <div>
-            <img src="/TAILWIND/ASSIGNMENTS/LMS/logo.jpeg" alt="" class="w-18 h-16 flex justify-start">
+            <img src="lblogo.jpeg" alt="" class="w-18 h-16 flex justify-start">
         </div>
         <div class="flex items-center justify-end p-2 space-x-8">
                 <a href="home.html"class="w-22 p-2 hover:ring-4 rounded-full ring-emerald-500">Home</a>
