--- a/LIBRARY_MS/TAILWIND/home.html
+++ b/LIBRARY_MS/TAILWIND/home.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LMS-Home</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="/TAILWIND/ASSIGNMENTS/LMS/lblogo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="lblogo.jpeg" type="image/x-icon">
 </head>
 <body class="bg-gray-100">
     <div  class="grid grid-cols-2 shadow-md shadow-emerald-500/50  p-2">
     <div>
-        <img src="/TAILWIND/ASSIGNMENTS/LMS/lblogo.jpeg" alt="" class="w-18 h-16 flex justify-start">
+        <img src="lblogo.jpeg" alt="" class="w-18 h-16 flex justify-start">
     </div>
     <div class="flex items-center justify-end p-2 space-x-8">
             <a href="home.html"class="w-22 p-2 ring-4  rounded-full ring-emerald-500">Home</a>
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div class="grid grid-cols-2">
-    <img src="/TAILWIND/ASSIGNMENTS/LMS/lbg.jpeg" alt="" class="w-auto h-auto ">
+    <img src="lbg.jpeg" alt="" class="w-auto h-auto ">
     <div ><h1 class="font-mono font-extrabold mt-56 text-emerald-700 text-2xl">Welcome To</h1><span class="font-mono font-extrabold mt-56 text-teal-500 text-6xl ">MAGIC LIBRARY!</span>
     <p class="mt-4 font-mono">Discover a world of knowledge and adventure at our library! Our website is your gateway to accessing a vast collection of books.With an easy-to-navigate interface, you can search for titles, check availability, and reserve materials—all from the comfort of your home.</p>
 
