--- a/KBA-COURSE/CSS/addcourse.html
+++ b/KBA-COURSE/CSS/addcourse.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><img src="/CSS/CLASSWORK/img/kbalogo.png" alt="kbalogo"></div>
+            <div class="logo"><img src="../CSS/img/kbalogo.png" alt="kbalogo"></div>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="courses.html">Courses</a></li>
