--- a/KBA-COURSE/CSS/cntct.html
+++ b/KBA-COURSE/CSS/cntct.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="navdiv">
-            <div class="logo"><img src="/CSS/CLASSWORK/img/kbalogo.png" alt="kbalogo"></div>
+            <div class="logo"><img src="../CSS/img/kbalogo.png" alt="kbalogo"></div>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="courses.html">Courses</a></li>
@@ -26,19 +26,19 @@
     </div>                  
     <div class="details">
         <div class="details1">
-            <img src="/CSS/CLASSWORK/img/Gmail Purple Icon.jpeg" alt=""width=50px>
+            <img src="../CSS/img/Gmail Purple Icon.jpeg" alt=""width=50px>
             <h3>Email</h3>
             <p>Our friendly team is here to help.</p>
             <p class="details2">hello@merakiui.com</p>
         </div>
         <div class="details1">
-            <img src="/CSS/CLASSWORK/img/location.jpeg" alt=""width=50px>
+            <img src="../CSS/img/location.jpeg" alt=""width=50px>
             <h3>Office</h3>
             <p>Come say hello at our office HQ.</p>
             <p class="details2">100 Smith Stree Collingwood VIC 3066 AU</p>
         </div>
         <div class="details1">
-            <img src="/CSS/CLASSWORK/img/phone.jpeg" alt=""width=50px>
+            <img src="../CSS/img/location.jpeg" alt=""width=50px>
             <h3>Phone</h3>
             <p>Mon-Fri from 8am to 5pm.</p>
             <p class="details2">+1 (555) 000-0000</p>
