--- a/LIBRARY_MS/CSS/home.html
+++ b/LIBRARY_MS/CSS/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="/LIBRARY MS/CSS/styles/home.css">
+    <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
     <div class="div1">
@@ -14,7 +14,6 @@
             <li><a href="addbook.html">Add Book</a></li>
             <li><a href="viewbook.html">View Book</a></li>
             <li><a href="login.html">Login</a></li>
-            <!-- <li><a href="">Log out</a></li> -->
         </ul>
 </nav>
 </div>
