--- a/LIBRARY_MS/CSS/signup.html
+++ b/LIBRARY_MS/CSS/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="/CSS/ASSIGNMENTS/LMS/styles/signup.css">
+    <link rel="stylesheet" href="styles/signup.css">
 </head>
 <body>
     <nav class="navbar">
@@ -13,7 +13,6 @@
             <li><a href="addbook.html">Add Book</a></li>
             <li><a href="viewbook.html">View Book</a></li>
             <li><a href="login.html">Login</a></li>
-            <!-- <li><a href="">Log out</a></li> -->
         </ul>
 </nav>
     <div class="signup-box">
