--- a/LIBRARY_MS/CSS/viewbook.html
+++ b/LIBRARY_MS/CSS/viewbook.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Books</title>
-    <link rel="stylesheet" href="/CSS/ASSIGNMENTS/LMS/styles/viewbook.css">
+    <link rel="stylesheet" href="styles/viewbook.css">
 </head>
 <body>
     <nav class="navbar">
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li><a href="addbook.html">Add Book</a></li>
             <li><a href="viewbook.html">View Book</a></li>
             <li><a href="login.html">Login</a></li>
-            <!-- <li><a href="">Log out</a></li> -->
         </ul>
 </nav>
 <div class="main">
@@ -32,7 +31,7 @@
 <tbody>
     <tr>
         <td>1.</td>
-        <td><img src="/CSS/ASSIGNMENTS/LMS/kos.jpeg" alt="" width="100"></td>
+        <td><img src="kos.jpeg" alt="" width="100"></td>
         <td>Kafka On The Shore</td>
         <td>Haruki Murakami</td>
         <td>9781400043668</td>
@@ -40,7 +39,7 @@
     </tr>
     <tr>
         <td>2.</td>
-        <td><img src="/CSS/ASSIGNMENTS/LMS/mi.jpg" alt="" width="100"></td>
+        <td><img src="mi.jpg" alt="" width="100"></td>
         <td>Mercury Island</td>
         <td>Akhil P Dharmajan</td>
         <td>9789362542557</td>
@@ -48,7 +47,7 @@
     </tr>
     <tr>
         <td>3.</td>
-        <td><img src="/CSS/ASSIGNMENTS/LMS/tgwdm.jpeg" alt="" width="100"></td>
+        <td><img src="tgwdm.jpeg" alt="" width="100"></td>
         <td>A Girl Who Drank The Moon</td>
         <td>Kelly Barnhill</td>
         <td>9781848126473</td>
