--- a/LIBRARY_MS/TAILWIND/login.html
+++ b/LIBRARY_MS/TAILWIND/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="/TAILWIND/ASSIGNMENTS/LMS/lblogo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="lblogo.jpeg" type="image/x-icon">
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
 
