--- a/KBA-COURSE/TAILWIND/contactus.html
+++ b/KBA-COURSE/TAILWIND/contactus.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="bg-purple-400">
-    <img class="size-16" src="/TAILWIND/KBACOURSES/images/kbalogo.png" alt="">
+    <img class="size-16" src="../TAILWIND/images/kbalogo.png" alt="">
     <div class="bg-purple-400  text-white flex justify-end space-x-3">
       <a href="homepage_htmlfile.html">Home</a>
       <a href="courses.html">Courses</a>
@@ -23,19 +23,19 @@
 
 <div class="grid grid-cols-3">
    <div class="justify-center items-center ml-12">
-    <img class="size-12 ml-64 mb-6 mt-44" src="/TAILWIND/KBACOURSES/images/Gmail Purple Icon.jpeg">
+    <img class="size-12 ml-64 mb-6 mt-44" src="../TAILWIND/images/Gmail Purple Icon.jpeg">
     <h3 class="text-center font-bold">Email</h3>
     <p class="text-center">Our friendly team is here to help.</p>
     <p class="text-center text-purple-600">hello@merakiui.com</p>
    </div> 
    <div  class="justify-center items-center ml-4">
-    <img class="size-12 ml-64 mb-6 mt-44" src="/TAILWIND/KBACOURSES/images/location.jpeg" alt="">
+    <img class="size-12 ml-64 mb-6 mt-44" src="../TAILWIND/images/location.jpeg" alt="">
     <h3 class="text-center font-bold mr-12">Office</h3>
     <p class="text-center mr-12">Come say hello at our office HQ..</p>
     <p class="text-center text-purple-600 mr-12">100 Smith Street Collingwood VIC 3066 AU.</p>
    </div> 
    <div  class="justify-center items-center ml-12">
-    <img class="size-12 ml-64 mb-6 mt-44" src="/TAILWIND/KBACOURSES/images/phone.jpeg" alt="">
+    <img class="size-12 ml-64 mb-6 mt-44" src="../TAILWIND/images/phone.jpeg" alt="">
     <h3 class="text-center font-bold">Phone</h3>
     <p class="text-center">Mon-Fri from 8am to 5pm..</p>
     <p class="text-center text-purple-600">+1 (555) 000-0000</p>
